Исправлены ошибки и реализована возможность вывода кастомного сообщения об ошибке

--- a/src/blocks/popup/__error/popup__error_visible.css
+++ b/src/blocks/popup/__error/popup__error_visible.css
@@ -2,7 +2,8 @@
   display: block;
   position: absolute;
   width: 100%;
-  min-height: 1em;
+  line-height: auto;
+  text-align: start;
   top: 47px;
   left: 0;
   color: #ff0000;
