--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -11,6 +11,7 @@
 @import url('./__input/_type/popup__input_type_error.css');
 @import url('./__error/popup__error_visible.css');
 @import url('./__button/_disabled/popup__button_disabled.css');
+@import url('./__content/_delete/popup__content_delete.css');
 
 
 .popup {
