--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@
 .popup__input_type_error{border-bottom-color:red}
 .popup__error_visible{color:red;display:block;left:0;line-height:auto;position:absolute;text-align:start;top:47px;width:100%;z-index:2}
 .popup__button_disabled{background-color:#fff;border:1px solid;border-color:inherit;color:#000;opacity:.2;pointer-events:none}
+.popup__content_delete{min-height:181px}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:none;font-family:Inter,Arial,sans-serif;justify-content:center;left:0;position:fixed;right:0;top:0;z-index:10}
 .popup_is-animated{display:flex;opacity:0;pointer-events:none;transition:visibility 0s .6s,opacity .6s;-webkit-user-select:none;-moz-user-select:none;user-select:none;visibility:visible}
 .popup_is-opened{display:flex;opacity:1;pointer-events:all;transition:visibility 0s,opacity .6s;visibility:visible}
